renamed basic as base

--- a/extension-crazy/rtl/ise-base/Makefile
+++ b/extension-crazy/rtl/ise-base/Makefile
@@ -4,7 +4,7 @@ RTL=..
 XTCLSH=${RTL}/scripts/xtclsh
 IMPACT=${RTL}/scripts/impact
 
-PROJECT=basic
+PROJECT=base
 
 all: ${PROJECT}.jed ${PROJECT}.svf ${PROJECT}.xsvf
 
