Added support for 512k banking

--- a/extension-crazy/rtl/ise-base/Makefile
+++ b/extension-crazy/rtl/ise-base/Makefile
@@ -12,6 +12,7 @@ ${PROJECT}.jed: ../top.v ../top.ucf ../main-${PROJECT}.v ${PROJECT}.tcl
 	@echo
 	@echo "========== generating " $@
 	@echo
+	@rm top.jed
 	${XTCLSH} ${PROJECT}.tcl rebuild_project
 	cp top.jed ${PROJECT}.jed
 
