ise-snoop only lacking VDBL support

--- a/extension-crazy/rtl/top.ucf
+++ b/extension-crazy/rtl/top.ucf
@@ -81,7 +81,9 @@ NET "XIN<3>"  LOC = "P56"  ;
 NET "XIN<4>"  LOC = "P55"  ;
 
 #Created by Constraints Editor (xc95144xl-tq100-10) - 2021/12/04
-#NET "CLK" TNM_NET = CLK;
-#TIMESPEC TS_CLK = PERIOD "CLK" 160 ns HIGH 40%;
-#NET "CLKx2" TNM_NET = CLKx2;
-#TIMESPEC TS_CLKx2 = PERIOD "CLKx2" 80 ns HIGH 50%;
+NET "CLK" TNM_NET = CLK;
+TIMESPEC TS_CLK = PERIOD "CLK" 160 ns HIGH 40%;
+NET "CLKx2" TNM_NET = CLKx2;
+TIMESPEC TS_CLKx2 = PERIOD "CLKx2" 80 ns HIGH 50%;
+NET "CLKx4" TNM_NET = CLKx4;
+TIMESPEC TS_CLKx4 = PERIOD "CLKx4" 40 ns HIGH 50%;
