Added global makefile

--- a/extension-crazy/test/reset512/Makefile
+++ b/extension-crazy/test/reset512/Makefile
@@ -1,8 +1,18 @@
 SHELL=/bin/sh
 TOP=../../..
-GIGAROM=${TOP}/../gigatron-rom
-COMPILE_GCL=${GIGAROM}/Core/compilegcl.py -s ${GIGAROM}/interface.json
+GIGAROM=../gigatron-rom
+COMPILE_GCL=${TOP}/${GIGAROM}/Core/compilegcl.py -s ${TOP}/${GIGAROM}/interface.json
+
+all: Reset.gt1
 
 Reset.gt1: Reset.gcl
 	${COMPILE_GCL} Reset.gcl
+
+broom: FORCE
+
+clean: FORCE
+	-rm 2>/dev/null Reset.gt1
+
+.PHONY: FORCE
+
 
