--- a/extension-crazy/test/memtest/Makefile
+++ b/extension-crazy/test/memtest/Makefile
@@ -1,5 +1,14 @@
 SHELL=/bin/sh
 GLCC=glcc
 
-memtest: memtest.c
+all: memtest.gt1
+
+memtest.gt1: memtest.c
 	${GLCC} -map=32k -rom=v5a memtest.c -o memtest.gt1
+
+broom: FORCE
+
+clean: FORCE
+	-rm 2>/dev/null memtest.gt1
+
+.PHONY: FORCE
