--- a/extension-crazy/rtl/top.ucf
+++ b/extension-crazy/rtl/top.ucf
@@ -1,23 +1,23 @@
 
-NET "ALU<0>"  LOC = "P6"    ; 
-NET "ALU<1>"  LOC = "P11"   ; 
-NET "ALU<2>"  LOC = "P14"   ; 
-NET "ALU<3>"  LOC = "P17"   ; 
-NET "ALU<4>"  LOC = "P20"   ; 
-NET "ALU<5>"  LOC = "P13"   ; 
-NET "ALU<6>"  LOC = "P8"    ; 
-NET "ALU<7>"  LOC = "P1"    ; 
-NET "CLK"  LOC = "P22"      | BUFG = CLK  ; 
-NET "CLKx2"  LOC = "P23"    | BUFG = CLK  ; 
-NET "CLKx4"  LOC = "P27"    | BUFG = CLK  ; 
+NET "ALU<0>"   LOC = "P6"   ; 
+NET "ALU<1>"   LOC = "P11"  ; 
+NET "ALU<2>"   LOC = "P14"  ; 
+NET "ALU<3>"   LOC = "P17"  ; 
+NET "ALU<4>"   LOC = "P20"  ; 
+NET "ALU<5>"   LOC = "P13"  ; 
+NET "ALU<6>"   LOC = "P8"   ; 
+NET "ALU<7>"   LOC = "P1"   ; 
+NET "CLK"      LOC = "P22"  | BUFG = CLK  ; 
+NET "CLKx2"    LOC = "P23"  | BUFG = CLK  ; 
+NET "CLKx4"    LOC = "P27"  | BUFG = CLK  ; 
 NET "GAH<10>"  LOC = "P42"  ; 
 NET "GAH<11>"  LOC = "P43"  ; 
 NET "GAH<12>"  LOC = "P63"  ; 
-NET "GAH<13>"  LOC = "P52"  ; 
-NET "GAH<14>"  LOC = "P64"  ; 
-NET "GAH<15>"  LOC = "P46"  ; 
-NET "GAH<9>"  LOC = "P49"   ; 
-NET "GAH<8>"  LOC = "P50"   ; 
+NET "GAH<13>"  LOC = "P52"  ;
+NET "GAH<14>"  LOC = "P64"  ;
+NET "GAH<15>"  LOC = "P46"  ;
+NET "GAH<9>"   LOC = "P49"  ;
+NET "GAH<8>"   LOC = "P50"  ;
 NET "GBUS<0>"  LOC = "P40"  | PWR_MODE = LOW  ; 
 NET "GBUS<1>"  LOC = "P37"  | PWR_MODE = LOW  ; 
 NET "GBUS<2>"  LOC = "P35"  | PWR_MODE = LOW  ; 
@@ -29,57 +29,56 @@ NET "GBUS<7>"  LOC = "P41"  | PWR_MODE = LOW  ;
 NET "MISO<0>"  LOC = "P28"  ; 
 NET "MISO<1>"  LOC = "P32"  ; 
 NET "MISO<2>"  LOC = "P58"  ; 
-NET "MOSI"  LOC = "P29"     | PWR_MODE = LOW  ; 
-NET "nACTRL"  LOC = "P61"   | PWR_MODE = LOW  ; 
-NET "nADEV<0>"  LOC = "P60" | PWR_MODE = LOW  ; 
-NET "nADEV<1>"  LOC = "P59" | PWR_MODE = LOW  ; 
-NET "nAE"  LOC = "P3"       | BUFG = OE  ; 
-NET "nGOE"  LOC = "P4"      | BUFG = OE  ; 
-NET "nGWE"  LOC = "P53"     ; 
-NET "nOL"  LOC = "P99"      ; 
-NET "nROE"  LOC = "P2"      ; 
-NET "nRWE"  LOC = "P92"     ; 
-NET "nSS<0>"  LOC = "P24"   | PWR_MODE = LOW  ; 
-NET "nSS<1>"  LOC = "P25"   | PWR_MODE = LOW  ; 
-NET "OUTD<0>"  LOC = "P10"  ; 
-NET "OUTD<1>"  LOC = "P12"  ; 
-NET "OUTD<2>"  LOC = "P16"  ; 
-NET "OUTD<3>"  LOC = "P18"  ; 
-NET "OUTD<4>"  LOC = "P19"  ; 
-NET "OUTD<5>"  LOC = "P15"  ; 
-NET "OUTD<6>"  LOC = "P9"   ; 
-NET "OUTD<7>"  LOC = "P7"   ; 
-NET "RAH<10>"  LOC = "P79"  ; 
-NET "RAH<11>"  LOC = "P78"  ; 
-NET "RAH<12>"  LOC = "P77"  ; 
-NET "RAH<13>"  LOC = "P76"  ; 
-NET "RAH<14>"  LOC = "P74"  ; 
-NET "RAH<15>"  LOC = "P68"  ; 
-NET "RAH<16>"  LOC = "P67"  ; 
-NET "RAH<17>"  LOC = "P66"  ; 
-NET "RAH<18>"  LOC = "P65"  ; 
-NET "RAH<8>"  LOC = "P96"   ; 
-NET "RAH<9>"  LOC = "P97"   ; 
-NET "RAL<0>"  LOC = "P80"   ; 
-NET "RAL<1>"  LOC = "P81"   ; 
-NET "RAL<2>"  LOC = "P82"   ; 
-NET "RAL<3>"  LOC = "P85"   ; 
-NET "RAL<4>"  LOC = "P86"   ; 
-NET "RAL<5>"  LOC = "P93"   ; 
-NET "RAL<6>"  LOC = "P94"   ; 
-NET "RAL<7>"  LOC = "P95"   ; 
-NET "RD<0>"  LOC = "P87"   ;  
-NET "RD<1>"  LOC = "P89"   ; 
-NET "RD<2>"  LOC = "P90"   ; 
-NET "RD<3>"  LOC = "P91"   ; 
-NET "RD<4>"  LOC = "P73"   ; 
-NET "RD<5>"  LOC = "P72"   ; 
-NET "RD<6>"  LOC = "P71"   ; 
-NET "RD<7>"  LOC = "P70"   ; 
-NET "SCK"  LOC = "P30"     ; 
-NET "XIN<3>"  LOC = "P56"  ; 
-NET "XIN<4>"  LOC = "P55"  ;
-
+NET "MOSI"     LOC = "P29"  | PWR_MODE = LOW  ; 
+NET "nACTRL"   LOC = "P61"  | PWR_MODE = LOW  ; 
+NET "nADEV<0>" LOC = "P60"  | PWR_MODE = LOW  ; 
+NET "nADEV<1>" LOC = "P59"  | PWR_MODE = LOW  ; 
+NET "nAE"      LOC = "P3"   | PWR_MODE = STD  | BUFG = OE  ; 
+NET "nGOE"     LOC = "P4"   | PWR_MODE = STD  | BUFG = OE  ; 
+NET "nGWE"     LOC = "P53"  | PWR_MODE = STD  ; 
+NET "nOL"      LOC = "P99"  ; 
+NET "nROE"     LOC = "P2"   | PWR_MODE = STD  ; 
+NET "nRWE"     LOC = "P92"  | PWR_MODE = STD  ; 
+NET "nSS<0>"   LOC = "P24"  | PWR_MODE = LOW  ; 
+NET "nSS<1>"   LOC = "P25"  | PWR_MODE = LOW  ; 
+NET "OUTD<0>"  LOC = "P10"  | PWR_MODE = STD  ; 
+NET "OUTD<1>"  LOC = "P12"  | PWR_MODE = STD  ; 
+NET "OUTD<2>"  LOC = "P16"  | PWR_MODE = STD  ; 
+NET "OUTD<3>"  LOC = "P18"  | PWR_MODE = STD  ; 
+NET "OUTD<4>"  LOC = "P19"  | PWR_MODE = STD  ; 
+NET "OUTD<5>"  LOC = "P15"  | PWR_MODE = STD  ; 
+NET "OUTD<6>"  LOC = "P9"   | PWR_MODE = STD  ; 
+NET "OUTD<7>"  LOC = "P7"   | PWR_MODE = STD  ; 
+NET "RAH<10>"  LOC = "P79"  | PWR_MODE = STD  ; 
+NET "RAH<11>"  LOC = "P78"  | PWR_MODE = STD  ;
+NET "RAH<12>"  LOC = "P77"  | PWR_MODE = STD  ;
+NET "RAH<13>"  LOC = "P76"  | PWR_MODE = STD  ;
+NET "RAH<14>"  LOC = "P74"  | PWR_MODE = STD  ;
+NET "RAH<15>"  LOC = "P68"  | PWR_MODE = STD  ;
+NET "RAH<16>"  LOC = "P67"  | PWR_MODE = STD  ;
+NET "RAH<17>"  LOC = "P66"  | PWR_MODE = STD  ;
+NET "RAH<18>"  LOC = "P65"  | PWR_MODE = STD  ;
+NET "RAH<8>"   LOC = "P96"  | PWR_MODE = STD  ;
+NET "RAH<9>"   LOC = "P97"  | PWR_MODE = STD  ;
+NET "RAL<0>"   LOC = "P80"  | PWR_MODE = STD  ; 
+NET "RAL<1>"   LOC = "P81"  | PWR_MODE = STD  ; 
+NET "RAL<2>"   LOC = "P82"  | PWR_MODE = STD  ;
+NET "RAL<3>"   LOC = "P85"  | PWR_MODE = STD  ;
+NET "RAL<4>"   LOC = "P86"  | PWR_MODE = STD  ;
+NET "RAL<5>"   LOC = "P93"  | PWR_MODE = STD  ;
+NET "RAL<6>"   LOC = "P94"  | PWR_MODE = STD  ;
+NET "RAL<7>"   LOC = "P95"  | PWR_MODE = STD  ;
+NET "RD<0>"    LOC = "P87"  | PWR_MODE = STD  ;
+NET "RD<1>"    LOC = "P89"  | PWR_MODE = STD  ;
+NET "RD<2>"    LOC = "P90"  | PWR_MODE = STD  ;
+NET "RD<3>"    LOC = "P91"  | PWR_MODE = STD  ;
+NET "RD<4>"    LOC = "P73"  | PWR_MODE = STD  ;
+NET "RD<5>"    LOC = "P72"  | PWR_MODE = STD  ;
+NET "RD<6>"    LOC = "P71"  | PWR_MODE = STD  ;
+NET "RD<7>"    LOC = "P70"  | PWR_MODE = STD  ;
+NET "SCK"      LOC = "P30"  | PWR_MODE = LOW  ; 
+NET "XIN<3>"   LOC = "P56"  ; 
+NET "XIN<4>"   LOC = "P55"  ;
 
 #Created by Constraints Editor (xc95144xl-tq100-10) - 2021/12/04
 NET "CLK" TNM_NET = CLK;
