--- a/extension-crazy/progs/libcon_b/Makefile
+++ b/extension-crazy/progs/libcon_b/Makefile
@@ -2,16 +2,16 @@ SHELL=/bin/sh
 GLCC=glcc
 
 
-LIBNAME=libconb
+LIBNAME=libcon_b.a
 SFILES=cons_asm.s
 CFILES=cons_setup.c
 O5FILES=${patsubst %.c,%_5.o,${CFILES}}
 O6FILES=${patsubst %.c,%_6.o,${CFILES}}
 OFILES=${O5FILES} ${O6FILES}
 
-all: ${LIBNAME}.a test.gt1
+all: ${LIBNAME} test.gt1
 
-${LIBNAME}.a: ${SFILES} ${O4FILES} ${O5FILES} ${O6FILES}
+${LIBNAME}: ${SFILES} ${O4FILES} ${O5FILES} ${O6FILES}
 	cat $+ > $@
 
 %_5.o: %.c
@@ -21,12 +21,12 @@ ${LIBNAME}.a: ${SFILES} ${O4FILES} ${O5FILES} ${O6FILES}
 	${GLCC} -c -cpu=6 -o $@ $<
 
 
-test.gt1: test.c ${LIBNAME}.a
-	${GLCC} -rom=v5a -o $@ test.c -L. -lconb
+test.gt1: test.c ${LIBNAME}
+	${GLCC} -rom=v5a -o $@ test.c ${LIBNAME}
 
 broom: FORCE
 
 clean: FORCE
-	-rm 2>/dev/null ${LIBNAME}.a ${OFILES} test.gt1
+	-rm 2>/dev/null ${LIBNAME} ${OFILES} test.gt1
 
 .PHONY: FORCE
