--- a/extension-crazy/Makefile
+++ b/extension-crazy/Makefile
@@ -3,7 +3,7 @@ TARGETS=all broom clean
 GIGAROM=../gigatron-rom
 GLCC=glcc
 
-SUBDIRS=rtl glcc test 
+SUBDIRS=rtl glcc progs
 
 ${TARGETS}:
 	for n in ${SUBDIRS}; do make -C $$n GIGAROM=${GIGAROM} GLCC=${GLCC} $@ ; done
