Added out-of-tree glcc map for 512k gigaton Compile with latest glcc and $ glcc --mapdir=path/to/progs/glcc -map=512k[,overlays] ... Get help with $ glcc --mapdir=path/to/progs/glcc -map=512k --info

--- a/extension-crazy/Makefile
+++ b/extension-crazy/Makefile
@@ -6,6 +6,7 @@ GLCC=glcc
 SUBDIRS=rtl rom progs
 
 ${TARGETS}:
-	for n in ${SUBDIRS}; do make -C $$n GIGAROM=${GIGAROM} GLCC=${GLCC} $@ ; done
+	for n in ${SUBDIRS}; do \
+	  make -C $$n GIGAROM=${GIGAROM} GLCC=${GLCC} $@ || exit 1; done
 
 .PHONY: all broom clean
