--- a/extension-crazy/progs/Makefile
+++ b/extension-crazy/progs/Makefile
@@ -1,13 +1,14 @@
 SHELL=/bin/sh
 TARGETS=all broom clean
-GIGAROM=../../../gigatron-rom
+GIGAROM=${abspath ../../../gigatron-rom}
 GLCC=glcc
 
-SUBDIRS=memtest pwmtest zpbanktest reset512\
-        libcon_b libcon_n libcon_h mscp\
-	mandelbrot music64k
+SUBDIRS=glcc\
+        memtest pwmtest zpbanktest reset512\
+        mscp mandelbrot music64k
 
 ${TARGETS}:
-	for n in ${SUBDIRS}; do make -C $$n GIGAROM=${GIGAROM} GLCC=${GLCC} $@ ; done
+	for n in ${SUBDIRS}; do \
+	  make -C $$n GIGAROM=${GIGAROM} GLCC=${GLCC} $@ || exit 1; done
 
 .PHONY: all broom clean
