--- a/extension-crazy/progs/music64k/Makefile
+++ b/extension-crazy/progs/music64k/Makefile
@@ -1,19 +1,19 @@
 SHELL=/bin/sh
 NAME=Music64k_ROMv5a
-GIGAROM=../../../../gigatron-rom
-GIGAROM_R=${shell realpath --relative-to=. "${GIGAROM}"}
-
+GIGAROM=${abspath ../../../../gigatron-rom}
+GIGAROMR=${shell realpath --relative-to=. "${GIGAROM}"}
+GTBASIC=${GIGAROM}/Contrib/at67/tools/gtbasic/gtbasic
 
 all: ${NAME}.gt1
 
 ${NAME}.gbas: ${NAME}.gbas.in Makefile
-	sed -e 's@@GIGAROM@@${GIGAROM_R}g' < $< > $@
+	sed -e 's@@GIGAROM@@${GIGAROMR}g' < $< > $@
 
 ${NAME}.gt1: ${NAME}.gbas
-	${GIGAROM}/Contrib/at67/tools/gtbasic/gtbasic ${NAME}.gbas
+	${GTBASIC} ${NAME}.gbas 2>${NAME}.log || (tail ${NAME}.log && exit 1)
 
 broom: FORCE
-	-rm 2>/dev/null ${NAME}.gbas ${NAME}.gasm
+	-rm 2>/dev/null ${NAME}.gbas ${NAME}.gasm ${NAME}.log
 
 clean: broom
 	-rm 2>/dev/null ${NAME}.gt1
