--- a/extension-crazy/progs/mandelbrot/Makefile
+++ b/extension-crazy/progs/mandelbrot/Makefile
@@ -1,18 +1,18 @@
 SHELL=/bin/sh
-GLCC=glcc
-LIBCON_H=../libcon_h/libcon_h.a
-
+CC=glcc
+CFLAGS=-rom=v5a
+LDFLAGS=--mapdir=../glcc -map=512k,lo,hr
 TARGET=mandelbrot.gt1
 OBJS=mandelbrot.o
 ASMS=fixed8.s
 
 all: ${TARGET}
 
-${TARGET}: ${OBJS} ${ASMS} ${LIBCON_H} Makefile
-	${GLCC} -map=32k,./mandelbrot.ovl -rom=v5a ${OBJS} ${ASMS} ${LIBCON_H} -o $@
+${TARGET}: ${OBJS} ${ASMS} ../glcc/map512k/libcon_h.a Makefile
+	${CC} ${LDFLAGS} ${CFLAGS} ${OBJS} ${ASMS} ${LIBCON_H} -o $@
 
 %.o: %.c
-	${GLCC} -c -rom=v5a $< -o $@
+	${CC} -c ${CFLAGS} -rom=v5a $< -o $@
 
 broom: FORCE
 
