--- a/extension-crazy/progs/mandelbrot/Makefile
+++ b/extension-crazy/progs/mandelbrot/Makefile
@@ -1,15 +1,15 @@
 SHELL=/bin/sh
 CC=glcc
 CFLAGS=-rom=v5a
-LDFLAGS=--mapdir=../glcc -map=512k,lo,hr
+LDFLAGS=-map=512k,lo,hr
 TARGET=mandelbrot.gt1
 OBJS=mandelbrot.o
 ASMS=fixed8.s
 
 all: ${TARGET}
 
-${TARGET}: ${OBJS} ${ASMS} ../glcc/map512k/libcon_h.a Makefile
-	${CC} ${LDFLAGS} ${CFLAGS} ${OBJS} ${ASMS} ${LIBCON_H} -o $@
+${TARGET}: ${OBJS} ${ASMS} Makefile
+	${CC} ${LDFLAGS} ${CFLAGS} ${OBJS} ${ASMS} -o $@
 
 %.o: %.c
 	${CC} -c ${CFLAGS} -rom=v5a $< -o $@
