--- a/extension-crazy/progs/mscp/Makefile
+++ b/extension-crazy/progs/mscp/Makefile
@@ -1,17 +1,17 @@
 SHELL=/bin/sh
 CC=glcc
 CFLAGS=-rom=v5a -DAVOID_SCANF
-LDFLAGS=--mapdir=../glcc
+LDFLAGS=
 
 all: mscp.gt1 mscp_n.gt1 mscp_h.gt1 
 
-mscp.gt1: mscp.o ../glcc/map512k/libcon_b.a
+mscp.gt1: mscp.o
 	${CC} ${LDFLAGS} ${CFLAGS} -map=512k mscp.o -o $@
 
-mscp_n.gt1: mscp.o ../glcc/map512k/libcon_n.a
+mscp_n.gt1: mscp.o
 	${CC} ${LDFLAGS} ${CFLAGS} -map=512k,nr mscp.o -o $@
 
-mscp_h.gt1: mscp.o ../glcc/map512k/libcon_h.a
+mscp_h.gt1: mscp.o
 	${CC} ${LDFLAGS} ${CFLAGS} -map=512k,hr mscp.o -o $@
 
 %.o: %.c
