updated to the latest exp rom

--- a/extension-crazy/rom/Makefile
+++ b/extension-crazy/rom/Makefile
@@ -26,27 +26,24 @@ endif
 dev.rom: Core/* ${APPS}/*/* ${RESET} Makefile interface.json
 	python3 Core/dev.asm.py\
 		-DWITH_512K_BOARD=1\
-		packedPictures=${APPS}/Pictures/packedPictures.rgb\
 		Snake=${APPS}/Snake/Snake_v3.gcl\
 		SYS_Racer_v1.py\
 		zippedRacerHorizon=${APPS}/Racer/Horizon-256x16.rgb\
-		Racer=${APPS}/Racer/Racer_v2.gcl\
-		Mandelbrot=${APPS}/Mandelbrot/Mandelbrot_v1.gcl\
-		SYS_Loader_vX.py\
-		Pictures=${APPS}/Pictures/Pictures_v3.gcl\
-		Loader=${APPS}/Loader/Loader_v4.gcl\
-		Credits=${APPS}/Credits/Credits_v3.gcl\
+		Racer=${APPS}/Racer/Racer.gcl\
+		Mandelbrot=${APPS}/Mandelbrot/Mandelbrot.gcl\
 		Tetronis=${APPS}/Tetronis/Tetronis_v2.gt1\
 		Bricks=${APPS}/Bricks/Bricks_v2.gt1\
-		TinyBASIC=${APPS}/TinyBASIC/TinyBASIC_v5.gcl\
+		TinyBASIC=${APPS}/TinyBASIC/TinyBASIC.gcl\
 		TicTac=${APPS}/TicTac/LoadTicTac_v1.gcl\
 		TicTacGtb=${APPS}/TicTac/TicTac_v2.gtb\
 		WozMon=${APPS}/WozMon/WozMon_v2.gcl\
-		Apple1=${APPS}/Apple-1/Apple-1_v2.gt1\
+		Apple1=${APPS}/Apple-1/Apple-1.gt1\
 		MSBASIC=${APPS}/MSBASIC/MSBASIC_v1.gt1\
+		Loader=${APPS}/Loader/Loader_v4.gcl\
+		Credits=${APPS}/Credits/Credits_v3.gcl\
 		Egg=${APPS}/Horizon/Horizon_dev_c.gt1\
 		Boot=${APPS}/CardBoot/CardBoot.gt1\
-		Main=${APPS}/MainMenu/MainMenu_v5.gcl\
+		Main=${APPS}/MainMenu/MainMenu.gcl\
 		Reset=${RESET}
 
 burn: $(DEV)
