updated makefiles. no longer build rom by default (used dev512k7.rom instead).

--- a/extension-crazy/Makefile
+++ b/extension-crazy/Makefile
@@ -3,7 +3,7 @@ TARGETS=all broom clean
 GIGAROM=${shell realpath -s ../../gigatron-rom}
 GLCC=glcc
 
-SUBDIRS=rtl rom progs
+SUBDIRS=rtl progs
 
 ${TARGETS}:
 	for n in ${SUBDIRS}; do \
