--- a/extension-crazy/progs/music64k/Makefile
+++ b/extension-crazy/progs/music64k/Makefile
@@ -2,11 +2,12 @@ SHELL=/bin/sh
 NAME=Music64k_ROMv5a
 GIGAROM=${abspath ../../../../gigatron-rom}
 GIGAROMR=${shell realpath --relative-to=. "${GIGAROM}"}
-GTBASIC=${GIGAROM}/Contrib/at67-bsd/tools/gtbasic/gtbasic
+GTBASIC=${GIGAROM}/Contrib/at67/tools/gtbasic/gtbasic
 
 all: ${NAME}.gt1
 
 ${NAME}.gbas: ${NAME}.gbas.in Makefile
+	echo ${GIGAROMR}
 	sed -e 's@@GIGAROM@@${GIGAROMR}g' < $< > $@
 
 ${NAME}.gt1: ${NAME}.gbas
