updated mscp for glcc >= 2.6.46

--- a/extension-crazy/progs/mscp/Makefile
+++ b/extension-crazy/progs/mscp/Makefile
@@ -1,28 +1,30 @@
 ROM=dev7
 GLCC=glcc
 PYTHON=python3
-OBJS=mscp.o core.o
-ASMS=onload.s
-
 PGMS=mscp.gt1 mscp_b.gt1 mscp_n.gt1 mscp_h.gt1
+OBJS=mscp.o core.o
 
 all: ${PGMS}
 
-mscp.gt1: ${OBJS} ${ASMS} mscp.ovl
-	${GLCC} -rom=${ROM} -map=128k,./mscp.ovl ${OBJS} ${ASMS} -o $@
-	${PYTHON} addbook.py $@ book.bin
+mscp.gt1: ${OBJS} book.bin
+	${GLCC} -rom=${ROM} -map=128k ${OBJS} -o $@
+	booklen=`ls -ln book.bin | awk '{ print($$5); }'` ;\
+	${PYTHON} gt1merge.py $@ --raw=book.bin@0x4000 --doke=$$booklen@0x42 -o $@
 
-mscp_b.gt1: ${OBJS} ${ASMS} mscp.ovl
-	${GLCC} -rom=${ROM} -map=512k,./mscp.ovl ${OBJS} ${ASMS} -o $@
-	${PYTHON} addbook.py $@ book.bin
+mscp_b.gt1: ${OBJS} book.bin
+	${GLCC} -rom=${ROM} -map=512k ${OBJS} -o $@
+	booklen=`ls -ln book.bin | awk '{ print($$5); }'` ;\
+	${PYTHON} gt1merge.py $@ --raw=book.bin@0x4000 --doke=$$booklen@0x42 -o $@
 
-mscp_n.gt1: ${OBJS} ${ASMS} mscp.ovl
-	${GLCC} -rom=${ROM} -map=512k,nr,./mscp.ovl ${OBJS} ${ASMS} -o $@
-	${PYTHON} addbook.py $@ book.bin
+mscp_n.gt1: ${OBJS} book.bin
+	${GLCC} -rom=${ROM} -map=512k,nr ${OBJS} -o $@
+	booklen=`ls -ln book.bin | awk '{ print($$5); }'` ;\
+	${PYTHON} gt1merge.py $@ --raw=book.bin@0x4000 --doke=$$booklen@0x42 -o $@
 
-mscp_h.gt1: ${OBJS} ${ASMS} mscp.ovl
-	${GLCC} -rom=${ROM} -map=512k,hr,./mscp.ovl ${OBJS} ${ASMS} -o $@
-	${PYTHON} addbook.py $@ book.bin
+mscp_h.gt1: ${OBJS} book.bin
+	${GLCC} -rom=${ROM} -map=512k,hr ${OBJS} -o $@
+	booklen=`ls -ln book.bin | awk '{ print($$5); }'` ;\
+	${PYTHON} gt1merge.py $@ --raw=book.bin@0x4000 --doke=$$booklen@0x42 -o $@
 
 mscp.o: mscp.c core.h
 	${GLCC} -rom=${ROM} -c $<
@@ -30,15 +32,12 @@ mscp.o: mscp.c core.h
 core.o: core.c core.h
 	${GLCC} -rom=${ROM} -c $<
 
-dumpbook: mscp.c
+book.bin: book.txt mscp.c Makefile
 	${CC} -DSAVE_BOOK_BIN=1 -DSUBTRACTIVE_RND=1 mscp.c -o dumpbook
-
-book.bin: dumpbook book.txt mscp.c Makefile
 	./dumpbook
 
 clean:
 	-rm ${OBJS} *.gt1 *.prf *.frg prof.txt dumpbook mscp
-
 
 # Profiling support
 
@@ -56,5 +55,11 @@ mscp-sim.gt1: ${CFILES} ${ASMS} mscp.ovl
 
 mscp-sim.prf: mscp-sim.gt1 prof.in
 	${GTSIM} -prof $@ mscp-sim.gt1 < prof.in
+
+
+# Old version
+
+mscp0.gt1: mscp0.c
+	${GLCC} -rom=${ROM} -map=sim,allout -DAVOID_SCANF $< -o $@
 
 
