wip: future-proofed gig512k

--- a/extension-crazy/rtl/ise-main/Makefile
+++ b/extension-crazy/rtl/ise-main/Makefile
@@ -18,6 +18,7 @@ ${PROJECT}.jed: ../top.v ../top.ucf  ${PROJECT}.tcl
 	-rm 2>/dev/null top.jed
 	${XTCLSH} ${PROJECT}.tcl rebuild_project
 	mv top.jed ${PROJECT}.jed
+	mv top.rpt ${PROJECT}.rpt
 
 ${PROJECT}.svf: ${PROJECT}.jed
 	@echo
